# monorepo

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.old  gazelle_python.yaml  go.mod  go.sum  requirements_3_13.in  requirements_lock_3_13.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: standard_pull_request.md
.github/workflows/: ci.yaml  master-ci.yaml  pr-ci.yaml
autofresh/: BUILD.bazel  app.go  config.go
autofresh/cmd/autofresh/: BUILD.bazel  main.go  main_test.go
autofresh/watcher/: BUILD.bazel  recursive_watcher.go  recursive_watcher_test.go
bazel/: NOTES.txt  base.MODULE.bazel  gazelle.MODULE.bazel  go.MODULE.bazel  oci_images.MODULE.bazel  workspace_deps.bzl
bazel/containers/: images.bzl
bazel/docker/: README.md  rules.bzl
bazel/go/: default.bzl  deps.bzl
bazel/local/: rules.bzl
bazel/module/: base.MODULE.bazel  python.MODULE.bazel  rust.MODULE.bazel
bazel/oci/: rules.bzl
bazel/patches/: gazelle.patch
bazel/python/: deps.bzl  load_pip_repositories.bzl  pip_install.bzl  rules.bzl
bazel/python/interpreter/: BUILD.bazel  setup_python_interpreter.bzl
bazel/scripts/: workspace_status_command.sh
example-go/: BUILD.bazel  main.go
example-go/greeter_client/: BUILD.bazel  main.go
example-go/greeter_server/: BUILD.bazel  main.go
example-go/helloworld/: BUILD.bazel
example-python/: BUILD.bazel  gazelle_python.yaml  requirements.txt
example-python/cli/: BUILD.bazel  main.py
example-python/example/: BUILD.bazel  __test__.py  lib.py  lib_test.py
example_python/cli/: BUILD.bazel  main.py
fastlinks/: BUILD.bazel  Makefile  README.md  app.go  app_test.go  notes
fastlinks/adapters/http/: BUILD.bazel  root.go  root_test.go  routes.go
fastlinks/cmd/fastlinks/: BUILD.bazel  main.go  main_test.go
fastlinks/docker/: docker-compose.yaml
fastlinks/models/: BUILD.bazel  route.go  route_test.go  user.go
fastlinks/services/: BUILD.bazel  health.go  health_test.go  routes.go
fastlinks/static/: footer.html  page.html
fastlinks/static/new/: new.html
fastlinks/static/root/: home.html
fastlinks/stores/bbolt/: BUILD.bazel  routes.go  routes_test.go  stores.go
fastlinks/stores/postgresql/: BUILD.bazel  routes.go  stores.go  stores_test.go
fastlinks/views/: BUILD.bazel  data.go  view.go
fib/: BUILD.bazel  README.md  fib.go  fib_test.go
hello_world_cc/: BUILD.bazel  main.cc
proto/example-go/: BUILD.bazel  greeter.proto
rs/: BUILD.bazel  Cargo.toml
rs/src/: main.rs
utils-go/file/: BUILD.bazel  file.go
utils-go/hash/: BUILD.bazel  argon2id.go  argon2id_test.go
utils-go/hmac/: BUILD.bazel  hmac.go  hmac_test.go
utils-go/logging/: BUILD.bazel  doc.go  logging.go  logging_test.go
utils-go/path/: BUILD.bazel  exapenduser_test.go  expanduser.go
utils-go/random/: BUILD.bazel  random.go  random_test.go
utils-go/remember/: BUILD.bazel  remember.go  remember_test.go
utils-go/sqldb/: BUILD.bazel  db.go  db_test.go
utils-go/stackerrors/: BUILD.bazel  README.md  doc.go  errors.go  errors_test.go  stacktrace.go  stacktrace_test.go
