###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

# images = use_extension("//bazel/containers:images.bzl", "images")

module(name = "com_github_terrenceho_monorepo")

# Basic Dpendencies
include("//bazel:base.MODULE.bazel")

# Gazelle
include("//bazel:gazelle.MODULE.bazel")

# OCI Images
include("//bazel:oci_images.MODULE.bazel")

# Go
include("//bazel:go.MODULE.bazel")
