###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

# images = use_extension("//bazel/containers:images.bzl", "images")

module(name = "com_github_terrenceho_monorepo")

# Basic Dpendencies
include("//bazel/module:base.MODULE.bazel")

# Gazelle
include("//bazel/module:gazelle.MODULE.bazel")

# OCI Images
include("//bazel/module:oci_images.MODULE.bazel")

# Go
include("//bazel/module:go.MODULE.bazel")

# Python
include("//bazel/module:python.MODULE.bazel")

# Rust
include("//bazel/module:rust.MODULE.bazel")
