load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "autofresh",
    srcs = [
        "app.go",
        "logger.go",
    ],
    importpath = "github.com/TerrenceHo/monorepo/autofresh",
    visibility = ["//visibility:public"],
    deps = [
        "//autofresh/watcher",
        "//utils-go/stackerrors",
    ],
)
