bazel_dep(name = "rules_go", version = "0.58.3")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_fsnotify_fsnotify",
    "com_github_google_uuid",
    "com_github_jmoiron_sqlx",
    "com_github_labstack_echo",
    "com_github_labstack_echo_v4",
    "com_github_lib_pq",
    "com_github_spf13_cobra",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "io_etcd_go_bbolt",
    "org_golang_x_crypto",
    "org_uber_go_zap",
)
