load("//bazel/go:default.bzl", "go_binary", "go_library")

go_library(
    name = "example-go_lib",
    srcs = ["main.go"],
    importpath = "github.com/TerrenceHo/monorepo/example-go",
    visibility = ["//visibility:private"],
    deps = ["@com_github_google_uuid//:uuid"],
)

go_binary(
    name = "example-go",
    embed = [":example-go_lib"],
    visibility = ["//visibility:public"],
)
