load("//bazel/go:default.bzl", "go_library")

go_library(
    name = "fastlinks",
    srcs = ["app.go"],
    importpath = "github.com/TerrenceHo/monorepo/fastlinks",
    visibility = ["//visibility:public"],
    deps = [
        "//fastlinks/adapters/http",
        "//fastlinks/services",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
    ],
)
