load("//bazel/go:default.bzl", "go_library", "go_test")

alias(
    name = "bin",
    actual = "//fastlinks/cmd/fastlinks:fastlinks",
)

alias(
    name = "image",
    actual = "//fastlinks/cmd/fastlinks:fastlinks_image",
)

alias(
    name = "install",
    actual = "//fastlinks/cmd/fastlinks:install",
)

go_library(
    name = "fastlinks",
    srcs = ["app.go"],
    embedsrcs = [
        "static/page.html",
        "static/footer.html",
        "static/root/home.html",
        "static/new/new.html",
    ],
    importpath = "github.com/TerrenceHo/monorepo/fastlinks",
    visibility = ["//visibility:public"],
    deps = [
        "//fastlinks/adapters/http",
        "//fastlinks/services",
        "//fastlinks/stores/bbolt",
        "//fastlinks/views",
        "//utils-go/file",
        "//utils-go/logging",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "fastlinks_test",
    srcs = ["app_test.go"],
    embed = [":fastlinks"],
    deps = [
        "//utils-go/logging",
        "@com_github_stretchr_testify//assert",
    ],
)
