load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "greeter_client_lib",
    srcs = ["main.go"],
    importpath = "github.com/TerrenceHo/monorepo/example-go/greeter_client",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/example-go",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "greeter_client",
    embed = [":greeter_client_lib"],
    visibility = ["//visibility:public"],
)
