load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "example-go",
    embed = [":helloworld_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "helloworld_lib",
    srcs = ["main.go"],
    importpath = "github.com/TerrenceHo/monorepo/example-go/helloworld",
    visibility = ["//visibility:private"],
    deps = ["@com_github_google_uuid//:uuid"],
)
