load("//bazel/python:rules.bzl", "py_binary")

py_binary(
    name = "cli_bin",
    srcs = ["__main__.py"],
    imports = [".."],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [
        "//example-python/example",
        "@example-python_pip_deps_flask//:pkg",
    ],
)
