load("//bazel/go:default.bzl", "go_library", "go_test")

go_library(
    name = "models",
    srcs = [
        "route.go",
        "user.go",
    ],
    importpath = "github.com/TerrenceHo/monorepo/fastlinks/models",
    visibility = ["//visibility:public"],
    deps = ["//utils-go/stackerrors"],
)

go_test(
    name = "models_test",
    size = "small",
    srcs = ["route_test.go"],
    embed = [":models"],
    deps = [
        "//utils-go/stackerrors",
        "@com_github_stretchr_testify//assert",
    ],
)
