load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "services",
    srcs = ["health.go"],
    importpath = "github.com/TerrenceHo/monorepo/fastlinks/services",
    visibility = ["//visibility:public"],
)

go_test(
    name = "services_test",
    srcs = ["health_test.go"],
    embed = [":services"],
    deps = [
        "//utils-go/stackerrors",
        "@com_github_stretchr_testify//assert",
    ],
)
