load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "hash",
    srcs = ["argon2id.go"],
    importpath = "github.com/TerrenceHo/monorepo/utils-go/hash",
    visibility = ["//visibility:public"],
    deps = [
        "//utils-go/random",
        "@org_golang_x_crypto//argon2",
    ],
)

go_test(
    name = "hash_test",
    srcs = ["argon2id_test.go"],
    embed = [":hash"],
)
