load("//bazel/go:default.bzl", "go_library", "go_test")

go_library(
    name = "hash",
    srcs = ["argon2id.go"],
    importpath = "github.com/TerrenceHo/monorepo/utils-go/hash",
    visibility = ["//visibility:public"],
    deps = [
        "//utils-go/random",
        "//utils-go/stackerrors",
        "@org_golang_x_crypto//argon2",
    ],
)

go_test(
    name = "hash_test",
    size = "small",
    srcs = ["argon2id_test.go"],
    embed = [":hash"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@org_golang_x_crypto//argon2",
    ],
)
