load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "random",
    srcs = ["random.go"],
    importpath = "github.com/TerrenceHo/monorepo/utils-go/random",
    visibility = ["//visibility:public"],
)

go_test(
    name = "random_test",
    srcs = ["random_test.go"],
    embed = [":random"],
    deps = ["@com_github_stretchr_testify//assert"],
)
